--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 body {
     font-family: 'Inter', sans-serif;
+    margin: 0;
 }
 
 .main-container {
     text-align: center;
     background-image: url(images/donation13.jpg);
     background-position: center;
+    height: 100%;
     background-size: cover;
-    height: 300px;
     background-repeat: no-repeat;
     padding-top: 120px;
+    padding-bottom: 120px;
     margin: 0;
 }
 
@@ -33,7 +35,7 @@ h1 {
 
 .donate-update {
     text-align: center;
-    padding: 20px;
+    padding: 15px;
 }
 
 .please-donate {
@@ -108,12 +110,19 @@ h1 {
 }
 
 .input-address {
-
     background-color: greenyellow;
     margin-left: 200px;
     margin-right: 200px;
     padding-top: 50px;
     padding-bottom: 50px;
+}
+
+.statistics {
+    text-align: center;
+    background-color: greenyellow;
+    color: black;
+    padding: 15px;
+    margin: 0;
 }
 
 .footer {
@@ -124,4 +133,8 @@ h1 {
     margin-top: 120px;
     padding-top: 30px;
     padding-bottom: 30px;
+}
+
+#icon {
+    width: 23px;
 }
